fix(lockup): fix left-hand alignment issues with small kicker

--- a/src/components/Lockup/Lockup.module.scss
+++ b/src/components/Lockup/Lockup.module.scss
@@ -42,7 +42,6 @@
   display: block;
   font-size: 0.4em;
   letter-spacing: 0.4em;
-  margin: auto;
   max-width: 100%;
   padding: 0 functions.spacing(0.25);
   padding-right: 0;
